[gd_scene load_steps=4 format=3 uid="uid://gwjmb35fowhg"]

[ext_resource type="Script" uid="uid://xkc6002fraap" path="res://source/editor/interfaces/world_decoration/decoration_list_element.gd" id="1_ao4ar"]
[ext_resource type="Texture2D" uid="uid://dlk4vjy5lgeuu" path="res://assets/icon.svg" id="1_lorcr"]
[ext_resource type="StyleBox" uid="uid://bmln1elnj0h8" path="res://resources/style_blueish.tres" id="2_lblit"]

[node name="DecorationListElement" type="Control"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_ao4ar")

[node name="Button" type="Button" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/normal = ExtResource("2_lblit")

[node name="DecorationPreview" type="TextureRect" parent="Button"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.15
anchor_right = 0.25
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("1_lorcr")
expand_mode = 1
stretch_mode = 5

[node name="PositionLabel" type="Label" parent="Button"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.15
anchor_right = 0.85
anchor_bottom = 0.85
grow_vertical = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "sample text"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Button"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.15
anchor_right = 0.85
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
